# FIDESlib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  Jenkinsfile  README.md  build.sh  shell.nix
cmake/: CMakeLists.txt  openfhe-hook.patch
src/CKKS/: Ciphertext.cu  CoeffsToSlots.cu  Context.cu
src/CKKS/openfhe-interface/: RawCiphertext.cu
test/: OpenFheInterfaceTests.cu
